# parallel-computing

./: README.md
src/: CMakeLists.txt  Makefile  Time.hpp  dealer.cpp  forcingMaker.h  idw.cpp  interpolation.cpp  matrix.hpp  read_data.cpp  write_file.cpp
